--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Blog Dashoboard</title>
 
     <style>
         table, th, td {
@@ -12,17 +12,20 @@
         td {text-align:right;}
     </style>
 </head>
+
 <body>
-<H1>Blog Information</H1>
-<a href="{{ url_for('edit') }}">Edit Post</a>
-</br>
-<a href="{{ url_for('delete') }}">Delete Post</a>
-</br>
+<H1>Blog Updates</H1>
 
 <H2>Blog Posts</H2>
 <table>
 <tr>
     <th>Title:</th>
+    <th>Publish Date:</th>
+    <th>Content:</th>
+    <th>Author:</th>
+    <th>View</th>
+    <th>Edit</th>
+    <th>Delete</th>
 </tr>
 {% for posts in blogs %}
 <tr>
@@ -30,9 +33,19 @@
     <td>{{posts[1]}}</td>
     <td>{{posts[2]}}</td>
     <td>{{posts[3]}}</td>
+    <td><a href="/{{posts[4]}}">View</a></td>
+    <td><a href="edit/{{posts[4]}}">Edit</a></td>
+    <td><a href="delete/{{posts[4]}}">Delete</a></td>
+
 </tr>
     </br>
 {% endfor %}
 </table>
+
+
+
+<H2>Blog Creation</H2>
+<a href="{{ url_for('create_blog') }}">Add Blog Entry</a>
+</br>
 </body>
 </html>
