--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Blogs</title>
 
     <style>
         table, th, td {
@@ -13,16 +13,14 @@
     </style>
 </head>
 <body>
-<H1>Blog Information</H1>
-<a href="{{ url_for('edit') }}">Edit Post</a>
-</br>
-<a href="{{ url_for('delete') }}">Delete Post</a>
-</br>
-
-<H2>Blog Posts</H2>
+<H1>Blog Posts</H1>
 <table>
 <tr>
     <th>Title:</th>
+    <th>Publish Date:</th>
+    <th>Content:</th>
+    <th>Author:</th>
+    <th>View</th>
 </tr>
 {% for posts in blogs %}
 <tr>
@@ -30,6 +28,8 @@
     <td>{{posts[1]}}</td>
     <td>{{posts[2]}}</td>
     <td>{{posts[3]}}</td>
+    <td><a href="/{{posts[4]}}">View</a></td>
+
 </tr>
     </br>
 {% endfor %}
