--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog Dashoboard</title>
+    <title>Blog Dashboard</title>
 
     <style>
         table, th, td {
@@ -14,9 +14,7 @@
 </head>
 
 <body>
-<H1>Blog Updates</H1>
-
-<H2>Blog Posts</H2>
+<H1>Blog Posts</H1>
 <table>
 <tr>
     <th>Title:</th>
