--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,6 @@
 <tr>
     <th>Title:</th>
     <th>Publish Date:</th>
-    <th>Content:</th>
     <th>Author:</th>
     <th>View</th>
 </tr>
@@ -26,7 +25,6 @@
 <tr>
     <td>{{posts[0]}}</td>
     <td>{{posts[1]}}</td>
-    <td>{{posts[2]}}</td>
     <td>{{posts[3]}}</td>
     <td><a href="/{{posts[4]}}">View</a></td>
 
@@ -34,5 +32,7 @@
     </br>
 {% endfor %}
 </table>
+<H1>Login</H1>
+<a href="/login">Log Me In</a>
 </body>
 </html>
