--- a/templates/edit.html
+++ b/templates/edit.html
@@ -16,12 +16,14 @@
 <H1>Edit a Blog Entry</H1>
 
 <form action="/update"  method="post" id="blogform">
-    Title: <input type = "text" name="title" value ="{{ post[0] }}">
+    Title: <input type = "text" name="title" value ="{{ post[0] }} required">
     <br>
     <br>
-    <textarea rows="20" cols="60" name="content" form="blogform">{{ post[2] }}</textarea>
+    <textarea rows="20" cols="60" name="content" form="blogform" required>{{ post[2] }}</textarea>
     <br>
+    <input type="hidden" name="postID" value="{{ post[4] }}">
     <input type="submit">
+
 </form>
 <br>
 
