--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,9 +18,6 @@
 <table>
 <tr>
     <th>Title:</th>
-    <th>Publish Date:</th>
-    <th>Content:</th>
-    <th>Author:</th>
     <th>View</th>
     <th>Edit</th>
     <th>Delete</th>
@@ -28,12 +25,9 @@
 {% for posts in blogs %}
 <tr>
     <td>{{posts[0]}}</td>
-    <td>{{posts[1]}}</td>
-    <td>{{posts[2]}}</td>
-    <td>{{posts[3]}}</td>
-    <td><a href="/{{posts[4]}}">View</a></td>
-    <td><a href="edit/{{posts[4]}}">Edit</a></td>
-    <td><a href="delete/{{posts[4]}}">Delete</a></td>
+    <td><button onclick="document.location='/{{posts[4]}}'">View</button></td>
+    <td><button onclick="document.location='edit/{{posts[4]}}'">Edit</button></td>
+    <td><button onclick="document.location='delete/{{posts[4]}}'">Delete</button></td>
 
 </tr>
     </br>
