--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/styles.css">
     <title>Blogs</title>
 
     <style>
@@ -13,7 +14,7 @@
     </style>
 </head>
 <body>
-<H1>Blog Posts</H1>
+<h1>Blog Posts</h1>
 <table>
 <tr>
     <th>Title:</th>
@@ -32,7 +33,7 @@
     </br>
 {% endfor %}
 </table>
-<H1>Login</H1>
+<h1>Login</h1>
 <a href="/login">Log Me In</a>
 </body>
 </html>
