--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todo App</title>
+    <link rel="stylesheet" href="../static/styles.css">
+    <title>Blog App</title>
 </head>
 <body>
 
@@ -22,7 +23,9 @@
         </tr>
     </table>
 </form>
-
+<p style="color:gray"><u>Just incase, here is the login</u></p>
+<p style="color:gray">Username: sam</p>
+<p style="color:gray">Passsword: password</p>
 
 </body>
 </html>
