--- a/templates/create_blog.html
+++ b/templates/create_blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../static/styles.css">
     <meta charset="UTF-8">
     <title>Create Blog Post</title>
 
@@ -13,7 +14,7 @@
     </style>
 </head>
 <body>
-<H1>Create a Blog Entry</H1>
+<h1>Create a Blog Entry</h1>
 
 <form action="/add"  method="post" id="blogform">
     Title: <input type = "text" name="title" required>
