--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1><center><bold>{{ message }}</bold></center></h1>
+<h1><bold>{{ message }}</bold></h1>
 <form action="/validate" width="400" method="post">
     <table>
         <tr>
@@ -25,7 +25,7 @@
 </form>
 <p style="color:gray"><u>Just incase, here is the login</u></p>
 <p style="color:gray">Username: sam</p>
-<p style="color:gray">Passsword: password</p>
+<p style="color:gray">Password: password</p>
 
 </body>
 </html>
