--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/styles.css">
-    <title>Create Blog Post</title>
+    <title>Edit Blog Post</title>
 
     <style>
         table, th, td {
